# defect-detection

./: .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  app.py  code.txt  config.py  create_test_data.py  create_test_model.py  evaluate.py  generate_test_images.py  monitor.py  mypy.ini  organize_data.py  outline.txt  predict.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  run_tests.py  secrets_setup.txt  setup.py  test_deployment.py  test_setup.py  train.py
.github/workflows/: aws-s3-deploy.yml  build.yml  ci-cd.yml  ci.yml  main.yml  python-app.yml  security.yml  unified-pipeline.yml
The Welding Defect Dataset/The Welding Defect Dataset/train/: 0e538f39-1d30436c-c23_jpg.rf.05ff78024b481ae4fada24ef439ebd97.txt  0e538f39-1d30436c-c23_jpg.rf.68d881523d9df5f75e91f0d319e2ad5c.txt  4d02e003-793c44d4-DWAi7_eXcAAdxuF_jpg.rf.1ed5c14711c779c7eeaba2af500c9167.txt  4d02e003-793c44d4-DWAi7_eXcAAdxuF_jpg.rf.1ed5c14711c779c7eeaba2af500c9167.xml  5ee0159b-e989d42a-images_jpeg_jpg.rf.dc2ccc988438d5d052b86c91b72f8d3b.txt  classes.txt
The Welding Defect Dataset/defects/: 0e538f39-1d30436c-c23_jpg.rf.3ce38b0e86b3cd83db06acc794de04f0.txt  classes.txt
config/: base_config.yml  config.yaml  environment.development.yml  environment.template.yml
data/labeled/defect/: 02fd0af7-51ab46bb-c13_jpg.rf.7de08cd3b264d9098d09f5fe6d21c959.txt  0e538f39-1d30436c-c23_jpg.rf.05ff78024b481ae4fada24ef439ebd97.txt  0e538f39-1d30436c-c23_jpg.rf.26d4bf7a38b3bf4195696d7d002dfc32.txt  0e538f39-1d30436c-c23_jpg.rf.3ce38b0e86b3cd83db06acc794de04f0.txt  0e538f39-1d30436c-c23_jpg.rf.68d881523d9df5f75e91f0d319e2ad5c.txt  0e538f39-1d30436c-c23_jpg.rf.77546dd3e656d80bb16894a47fb55b27.txt  0e538f39-1d30436c-c23_jpg.rf.9af91763a613bf193d03c39400da2ec6.txt  116e2e9b-6b433071-download_2_jpeg_jpg.rf.476154d28d24d7450321e4ae5b581f2e.txt  (+84 more)
data/labeled/no_defect/: classes.txt  (+54 more)
data/raw/: 0e538f39-1d30436c-c23_jpg.rf.05ff78024b481ae4fada24ef439ebd97.txt  0e538f39-1d30436c-c23_jpg.rf.3ce38b0e86b3cd83db06acc794de04f0.txt  classes.txt
docs/: index.html
labelImg/: labelImg.py  setup.py
labelImg/libs/: __init__.py  canvas.py  colorDialog.py  combobox.py  constants.py  create_ml_io.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  lightWidget.py  pascal_voc_io.py  settings.py  shape.py  stringBundle.py  toolBar.py  ustr.py  utils.py  yolo_io.py  zoomWidget.py
labelImg/tests/: test_io.py  test_qt.py  test_settings.py  test_stringBundle.py  test_utils.py
labelImg/tools/: label_to_csv.py
logs/train/: events.out.tfevents.1738073466.OM.46548.0.v2
logs/validation/: events.out.tfevents.1738073486.OM.46548.1.v2  events.out.tfevents.1738073701.OM.56292.1.v2
monitoring/health_checks/: health_check_20250128_162623.json  health_check_20250128_162729.json  health_check_20250128_162835.json  health_check_20250128_162941.json  health_check_20250128_163033.json  health_check_20250128_163047.json  health_check_20250128_163140.json  health_check_20250128_163153.json  health_check_20250128_163246.json  health_check_20250128_163300.json  health_check_20250128_163352.json  health_check_20250128_163406.json  health_check_20250128_163458.json  health_check_20250128_163512.json  health_check_20250128_163604.json  health_check_20250128_163618.json  health_check_20250128_163710.json  health_check_20250128_163724.json  health_check_20250128_163817.json  health_check_20250128_163830.json  health_check_20250128_163923.json  health_check_20250128_163937.json  health_check_20250128_164029.json  health_check_20250128_164043.json  health_check_20250128_164135.json  health_check_20250128_164149.json  health_check_20250128_164241.json  health_check_20250128_164255.json  health_check_20250128_164347.json  health_check_20250128_164401.json  health_check_20250128_164454.json  health_check_20250128_164507.json  health_check_20250128_164600.json  health_check_20250128_164613.json  health_check_20250128_164706.json  health_check_20250128_164719.json  health_check_20250128_164812.json  health_check_20250128_164826.json  health_check_20250128_164918.json  health_check_20250128_164932.json  (+6 more)
scripts/: dashboard.py  defect-detection-health.service  health_check.py  install_health_check_service.ps1  visualize_history.py
scripts/templates/: dashboard.html
src/: __init__.py  config.py  preprocessing.py  train.py
src/data/: preprocessing.py
src/defect-detection/: __init__.py  app.py  preprocessing.py  train.py
src/defect_detection/: __init__.py  app.py  config.py  evaluate.py  organize_data.py  predict.py  preprocessing.py  train.py
src/models/: model.py
src/utils/: backup.py  notifications.py  visualization.py
templates/: batch.html  history.html  index.html  login.html
tests/: conftest.py  create_test_images.py  test_model.py  test_prediction.py  test_preprocessing.py
(+55 files in other folders)
