[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defect_detection"
version = "0.1.0"
description = "Deep learning based defect detection system"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "flask>=2.3.0",
    "flask-login>=0.6.0",
    "prometheus_client>=0.17.0",
    "google-cloud-storage>=2.10.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "bandit==1.7.7",
    "safety>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
^/dist/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["build", "dist"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=xml"
testpaths = ["tests"]
